testsuite/tests/indexed-types/should_fail/T2888.stderr

T2888.hs:7:1: error:
    • The associated type ‘D’
      mentions none of the type or kind variables of the class ‘C w’
    • In the class declaration for ‘C’
